--- a/src/demos/00_template/component.html
+++ b/src/demos/00_template/component.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,18 +9,21 @@
     <script src="../../js/react-dom.min.js"></script>
     <script src="../../js/browser.min.js"></script>
 </head>
+
 <body>
 
     <div id="container"></div>
 
     <script type="text/babel">
-        var BuckysComponent = React.createClass({
-            render: function() {
-                return (<h2>This is a simple component</h2>);
-            }
-        });
-        ReactDOM.render(<BuckysComponent />, document.getElementById('container'));
+        var Sushi = React.createClass({ render: function() { return(
+        <div>
+            <h3>this is a simple component.</h3>
+            <p>hello is this working?</p>
+        </div>); 
+            } 
+            }); ReactDOM.render(<Sushi />, document.getElementById('container'));
     </script>
 
 </body>
+
 </html>
