--- a/src/demos/00_template/index.html
+++ b/src/demos/00_template/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,16 +9,16 @@
     <script src="../../js/react-dom.min.js"></script>
     <script src="../../js/browser.min.js"></script>
 </head>
+
 <body>
 
     <div id="container"></div>
 
     <script type="text/babel">
         ReactDOM.render(
-            <h2>Welcome to React!</h2>,
-            document.getElementById('container')
-        );
+            <h2>Hello React!!</h2>, document.getElementById('container') );
     </script>
 
 </body>
+
 </html>
